@@ -128,7 +128,7 @@ fi
 
 # build coreboot core.img
 if test -e "${coreboot_dir}" ; then
-    echo "Generates coreboot"
+    echo "Enabling coreboot support ..."
     memdisk_img=`mktemp`
     memdisk_dir=`mktemp -d`
     mkdir -p ${memdisk_dir}/boot/grub
@@ -155,12 +155,12 @@ EOF
     grub_mkisofs_arguments="${grub_mkisofs_arguments} --modification-date=$(echo ${iso_uuid} | sed -e s/-//g)"
 fi
 
-# build eltorito core.img
+# build BIOS core.img
 if test -e "${pc_dir}" ; then
-    echo "Generates eltorito"
+    echo "Enabling BIOS support ..."
     core_img=`mktemp`
     grub-mkimage -d ${pc_dir}/ -o ${core_img} --prefix=/boot/grub/i386-pc \
-        memdisk tar search iso9660 configfile sh \
+        iso9660 configfile sh \
         biosdisk
     cat ${pc_dir}/cdboot.img ${core_img} > ${iso9660_dir}/boot/grub/i386-pc/eltorito.img
     rm -f ${core_img}
